# p008_memory_hub

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
memory_bank/: architecture.md  decisions.md  glossary.md  open_questions.md  project_brief.md  working_log.md
scripts/: eval_redaction.sh  eval_retrieval.sh  install.sh  smoke_test.sh  verify_all.sh
src/cli/: __init__.py  commands.py
src/memory_hub/: __init__.py  context_assembler.py  database.py  episode.py  event_store.py  redaction.py  retrieval.py
tests/: test_episode.py  test_project_override.py  test_redaction.py
