[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p008-memory-hub"
version = "0.1.1"
description = "Platform-grade Memory Fabric for OpenClaw + Claude Code"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.scripts]
memory-hub = "cli.commands:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
